# Entanglement

./: .gitignore  .graphifyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REPORT.md  SECURITY.md  STATUS.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: bus-factor.yml  ci.yml  release.yml
.iterations/: LOG.md  PLAN.md
crates/entangle-agent-host/: .mcp.json  Cargo.toml
crates/entangle-agent-host/src/: errors.rs  gateway.rs  lib.rs  session.rs
crates/entangle-agent-host/src/adapters/: claude_code.rs  codex.rs  mod.rs  opencode.rs
crates/entangle-agent-host/tests/: adapters.rs  session.rs
crates/entangle-atc-matrix/: Cargo.toml
crates/entangle-atc-matrix/tests/: matrix.rs
crates/entangle-bench/: Cargo.toml
crates/entangle-bench/benches/: broker.rs  kernel.rs  pairing.rs  signing.rs
crates/entangle-bench/src/: lib.rs
crates/entangle-bin/: Cargo.toml
crates/entangle-bin/src/: config.rs  lib.rs  main.rs  maintenance.rs  methods.rs  server.rs  state.rs
crates/entangle-bin/tests/: rpc.rs  state.rs
crates/entangle-biscuits/: Cargo.toml
crates/entangle-biscuits/src/: bridge.rs  claims.rs  errors.rs  lib.rs  mint.rs  verifier.rs
crates/entangle-biscuits/tests/: bridge.rs  roundtrip.rs
crates/entangle-broker/: Cargo.toml
crates/entangle-broker/src/: audit.rs  broker.rs  errors.rs  lib.rs  policy.rs
crates/entangle-broker/tests/: atc_spec.rs  biscuit_grant.rs
crates/entangle-cli/: Cargo.toml
crates/entangle-cli/src/: config.rs  identity.rs  main.rs
crates/entangle-cli/src/cmd/: compute.rs  doctor.rs  init.rs  keyring.rs  mesh.rs  mod.rs  pair.rs  plugins.rs  version.rs
crates/entangle-cli/tests/: cli.rs  compute.rs  doctor.rs  init.rs  mesh.rs  pair.rs  version.rs
crates/entangle-core/: Cargo.toml
crates/entangle-core/src/: lib.rs
crates/entangle-host/: Cargo.toml
crates/entangle-host/fixtures-src/hello-pong/: Cargo.toml  build.sh
crates/entangle-host/fixtures-src/hello-pong/src/: lib.rs
crates/entangle-host/src/: bindings.rs  engine.rs  errors.rs  lib.rs  plugin.rs  state.rs
crates/entangle-host/tests/: fixture_invoke.rs
crates/entangle-host/tests/fixtures/: README.md  hello-pong.wasm
crates/entangle-ipc/: Cargo.toml
crates/entangle-ipc/src/: bus.rs  envelope.rs  errors.rs  lib.rs  topic.rs
crates/entangle-manifest/: Cargo.toml
crates/entangle-manifest/src/: lib.rs  loader.rs  schema.rs  validate.rs
crates/entangle-manifest/tests/: atc_spec.rs
crates/entangle-mesh-iroh/: Cargo.toml
crates/entangle-mesh-iroh/src/: lib.rs
crates/entangle-mesh-local/: Cargo.toml
crates/entangle-mesh-local/src/: discovery.rs  errors.rs  lib.rs  peer.rs
crates/entangle-mesh-local/tests/: discovery.rs
crates/entangle-mesh-tailscale/: Cargo.toml
crates/entangle-mesh-tailscale/src/: lib.rs
crates/entangle-observability/: Cargo.toml
crates/entangle-observability/src/: lib.rs  metrics.rs  otel.rs
crates/entangle-oci/: Cargo.toml
crates/entangle-oci/src/: lib.rs
crates/entangle-pairing/: Cargo.toml
crates/entangle-pairing/src/: code.rs  envelope.rs  errors.rs  fingerprint.rs  lib.rs  session.rs
crates/entangle-peers/: Cargo.toml
crates/entangle-peers/src/: errors.rs  lib.rs  peer.rs  store.rs
crates/entangle-rpc/: Cargo.toml
crates/entangle-rpc/src/: client.rs  errors.rs  lib.rs  methods.rs
crates/entangle-rpc/tests/: client.rs  compute.rs  mesh.rs
crates/entangle-runtime/: Cargo.toml
crates/entangle-runtime/src/: errors.rs  integrity.rs  kernel.rs  lib.rs  lifecycle.rs  loader.rs  os_sandbox.rs  tests.rs
crates/entangle-runtime/tests/: hello_world_e2e.rs  integrity.rs
crates/entangle-scheduler/: Cargo.toml
crates/entangle-scheduler/src/: dispatcher.rs  errors.rs  lib.rs  placement.rs  worker.rs
crates/entangle-scheduler/tests/: dispatcher.rs
crates/entangle-sdk/: Cargo.toml
crates/entangle-sdk/src/: cap.rs  lib.rs  log.rs
crates/entangle-signing/: Cargo.toml
crates/entangle-signing/src/: artifact.rs  keypair.rs  keyring.rs  lib.rs  signature.rs
crates/entangle-signing/tests/: atc_spec.rs  integration.rs
crates/entangle-types/: Cargo.toml
crates/entangle-types/src/: capability.rs  errors.rs  lib.rs  peer_id.rs  plugin_id.rs  resource.rs  task.rs  tier.rs
crates/entangle-types/tests/: atc_spec.rs
crates/entangle-wit/: Cargo.toml
crates/entangle-wit/src/: lib.rs
crates/entangle-wit/tests/: wit_parses.rs
crates/entangle-wit/wit/: capability.wit  host-info.wit  logging.wit  stream.wit  world.wit
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: SCREENSHOT_TODO.md  architecture.md  tutorial.md
docs/maintainers/: agent-lead.md  core-runtime-lead.md  mesh-lead.md  release-lead.md  roles.toml  security-lead.md
docs/research/: 01-permissions.md  02-rust-plugins.md  03-distributed-compute.md  04-agent-layer.md  05-comparable-systems.md  06-bittorrent-feasibility.md
docs/superpowers/specs/: 2026-04-28-centrifuge-architecture-v1.md  2026-04-28-strata-architecture-v3.md  2026-04-28-strata-architecture-v4.md  2026-04-28-strata-architecture-v5.md  2026-04-29-entanglement-architecture-v6.md  critic-a-review-v1.md  critic-a-review-v2.md  critic-a-review-v3.md  critic-a-review-v4.md  critic-a-review-v5.md  critic-b-review-v1.md  critic-b-review-v2.md  critic-b-review-v3.md  critic-b-review-v4.md  critic-b-review-v5.md
examples/hash-it/: Cargo.toml  README.md  entangle.toml
examples/hash-it/src/: lib.rs
examples/hello-world/: Cargo.toml  README.md  entangle.toml
examples/hello-world/src/: lib.rs
graphify-out/: GRAPH_REPORT.md  graph.html
scripts/: verify-release.sh
supply-chain/: README.md  audits.toml  config.toml
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
