[package]
name = "entangle-agent-host"
description = "MCP config adapter layer for AI coding agents — snapshots, rewrites, and restores agent MCP configs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entangle-types = { path = "../entangle-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
