[package]
name = "entangle-atc-matrix"
description = "Architecture conformance tests for the Entanglement workspace (internal, publish=false)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]

[dev-dependencies]
walkdir.workspace = true
regex.workspace = true
