[package]
name = "entangle-broker"
description = "Capability broker and powerbox runtime for Entanglement plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
entangle-types = { workspace = true }
entangle-manifest = { workspace = true }
entangle-peers = { workspace = true }
entangle-biscuits = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
entangle-signing = { workspace = true }
entangle-biscuits = { workspace = true }
biscuit-auth = { workspace = true }
semver = { workspace = true }
toml = { workspace = true }
