[package]
name = "entangle-ipc"
description = "Internal message bus and IPC framing for inter-plugin communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
entangle-types = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
