[package]
name = "entangle-mesh-local"
description = "mDNS-based LAN peer discovery for the mesh.local transport (Phase 1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
entangle-types = { workspace = true }
mdns-sd = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
