[package]
name = "entangle-observability"
description = "Shared tracing subscriber bootstrap for entangled and entangle CLI (spec §9.6)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }
is-terminal = { workspace = true }
