[package]
name = "entangle-pairing"
description = "Cryptographic primitives for the device-pairing flow: 6-digit codes, Ed25519 fingerprints, and TOFU envelopes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entangle-types   = { workspace = true }
entangle-signing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }

[dev-dependencies]
regex = { workspace = true }
