[package]
name = "entangle-scheduler"
description = "Distributed compute scheduler: worker advertisement, greedy placement, and local dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
entangle-types   = { workspace = true }
entangle-runtime = { workspace = true }
parking_lot      = { workspace = true }
tokio            = { workspace = true, features = ["sync", "time", "rt", "macros"] }
async-trait      = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
serde            = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio            = { workspace = true, features = ["full"] }
tempfile         = { workspace = true }
toml             = { workspace = true }
uuid             = { workspace = true }
entangle-signing = { workspace = true }
