[package]
name = "entangle-types"
description = "Shared type definitions: Tier, PluginId, PeerId, capabilities, tasks, and errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
semver = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
