[package]
name = "entangle-wit"
description = "WIT contract definitions for the entangle:plugin@0.1.0 package"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# pure data crate, no runtime deps

[dev-dependencies]
wit-parser.workspace = true
